--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -24,25 +24,19 @@ body {
 }
 
 .container {
-  /* width: 80%;
-  max-width: 750px; */
+  width: 80%;
+  max-width: 750px;
+  margin: 0 auto;
+
+
+}
+
+.intro {
   background: #23424a;
   color: white;
   padding: 50px 0;
 }
 
 .intro-content {
-  margin: 0 auto;
   width: 50%;
-}
-
-
-.intro-content>p {
-  max-width: 50%;
-}
-
-.main-content {
-  margin: 0 auto;
-  width: 50%;
-
 }
